app/styles/main.scss
// bower:scss
// endbower
@import "components";

body {
  background: #fafafa;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color: #333;
}

.hero-unit {
  margin: 50px auto 0 auto;
  width: 300px;
  font-size: 18px;
  font-weight: 200;
  line-height: 30px;
  background-color: #eee;
  border-radius: 6px;
  padding: 60px;
  h1 {
    font-size: 60px;
    line-height: 1;
    letter-spacing: -1px;
  }
}

.description {
  padding: 20px;
  margin-top: 35px;
  font-size: 16px;
}

.action {
  padding: 20px;
}

.animate {
	transition: all 0.1s;
	-webkit-transition: all 0.1s;
}

.green {
	background-color: #82BF56;
	border-bottom: 5px solid #669644;
	// text-shadow: 0px -2px #669644;
}

.action-button {
  width: 137px;
  height: 41px;
  padding-top: 10px;
  position: relative;
  margin: 0px 10px 10px 37px;
  float: left;
  border-radius: 4px;
  font-size: 25px;
  color: #FFF;
  font-family: 'Bungee Inline', cursive;
  text-decoration: none;
  &:active {
    transform: translate(0px,5px);
    -webkit-transform: translate(0px,5px);
    border-bottom: 1px solid $success-color;
  }
}

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

.main-section {
  margin: 50px auto 0 auto;
  // width: 400px;
  font-size: 18px;
  font-weight: 200;
  line-height: 30px;
  // border: 1px solid #eee;
  border-radius: 6px;
  padding-top: 70px;
}

.box {
  text-align: center;
  padding: 6px 0px;
}

.box-unit {
  display: inline-block;
  width: 250px;
  height: 250px;
  text-align: center;
  // border-radius: 6px;
  margin-right: 3px;
}

.separator {
  height: 4.5px;
}

.social-item {
  display:inline-block;
  width:13%;
  min-width:110px;
  margin-top:10px;
  margin-bottom:10px;
}

@media screen and (max-width: 960px) and (min-width: 480px) {

}

@media screen and (max-width: 521px) and (min-width: 480px) {
  .box-unit {
    width: 80%;
    margin-bottom: 10px;
  }
}


@media screen and (max-width: 480px) {
  .box-unit {
    width: 100%;
    margin-bottom: 10px;
  }
}

@media screen and (min-width: 960px) {

}

/* entire container, keeps perspective */
.flip-container {
  perspective: 1000px;
}
/* flip the pane when hovered */
.flip-container:hover .flipper, .flip-container.hover .flipper {
  transform: rotateY(180deg);
}

/* flip speed goes here */
.flipper {
  transition: 0.6s;
  transform-style: preserve-3d;
  height: 100%;
  position: relative;
}

/* hide back of pane during swap */
.front, .back {
  backface-visibility: hidden;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

/* front pane, placed above back */
.front {
  background: #eee;
  z-index: 2;
  line-height: 250px;
  /* for firefox 31 */
  transform: rotateY(0deg);
}

/* back, initially hidden pane */
.back {
  background: $font-color-reverse;
  color: white;
  transform: rotateY(180deg);
}

